--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
     <span class="flame">🔥</span>
   </div>
   <h1>SURVIVOR 50</h1>
-  <div class="subtitle">Fantasy League &bull; Season of the Champions</div>
+  <div class="subtitle">Fantasy League &bull; In The Hands of Sophie Lewis</div>
   <div><span id="sync-status" class="sync-status saving">⟳ Loading…</span></div>
 </header>
 
