--- a/index.html
+++ b/index.html
@@ -728,12 +728,19 @@ async function initFirebase() {
     dbRef = ref(db, 'league');
 
     // Listen for real-time updates from any device
+    // Note: also fires immediately on connect — handles both empty and populated DB
+    let initialLoad = true;
     onValue(dbRef, (snapshot) => {
       const data = snapshot.val();
       if (data) {
         state = data;
-        setSyncStatus('saved', '✓ Synced');
-        // Re-render active view
+      }
+      setSyncStatus('saved', '✓ Synced');
+      // Always render on first load; subsequent updates re-render the active view
+      if (initialLoad) {
+        initialLoad = false;
+        renderStandings();
+      } else {
         const active = document.querySelector('.view.active');
         if (active) {
           if (active.id === 'standings') renderStandings();
@@ -776,10 +783,11 @@ async function init() {
   setSyncStatus('saving', '⟳ Connecting…');
   const ok = await initFirebase();
   if (!ok) {
-    // Not configured yet — just render with local/empty state
+    // Firebase not configured — render with local/empty state immediately
     renderStandings();
   }
-  // If Firebase is configured, onValue will fire immediately and trigger renderStandings
+  // If Firebase IS configured, the onValue listener fires immediately on connect
+  // and calls renderStandings() itself (even if the database is empty)
 }
 
 function castawayTeam(c) { return state.assignments[c] || null; }
