--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
     <span class="flame">🔥</span>
   </div>
   <h1>SURVIVOR 50</h1>
-  <div class="subtitle">Fantasy League &bull; In The Hands of Sophie Lewis</div>
+  <div class="subtitle">Fantasy League &bull; Season of the Champions</div>
   <div><span id="sync-status" class="sync-status saving">⟳ Loading…</span></div>
 </header>
 
@@ -679,10 +679,10 @@ const SCORING = {
 //  FIREBASE CONFIG — paste your values here after setup
 // ============================================================
 const FIREBASE_CONFIG = {
-  apiKey:            "AIzaSyAl4w_9Re0kyCBb1hDdAGkRLmY93j1Svg0",
-  authDomain:        "gramercy-survivor-league.firebaseapp.com",
-  databaseURL:       "https://gramercy-survivor-league-default-rtdb.firebaseio.com",
-  projectId:         "gramercy-survivor-league",
+  apiKey:            "PASTE_YOUR_API_KEY_HERE",
+  authDomain:        "PASTE_YOUR_PROJECT_ID.firebaseapp.com",
+  databaseURL:       "https://PASTE_YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
+  projectId:         "PASTE_YOUR_PROJECT_ID",
 };
 // ============================================================
 
