--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@
     <div class="rule-row"><span>Voted out (including on their boot week)</span><span class="rule-pts neg">−5 pts</span></div>
     <div class="rule-row"><span>Appear at Final Tribal Council</span><span class="rule-pts pos">+5 pts</span></div>
     <div class="rule-row"><span>Win Survivor</span><span class="rule-pts pos">+10 pts</span></div>
+    <div class="rule-row"><span>Billie Eilish etc.</span><span class="rule-pts pos">???</span></div>
   </div>
   <div class="rules-card">
     <h3>League Format</h3>
